헤더 / 푸터 기초 작업 반영, 첫 페이지 재구성 등

--- a/index.html
+++ b/index.html
@@ -1,13 +1,19 @@
-<!DOCTYPE html>
+<!doctype html>
 <html lang="ko">
   <head>
     <meta charset="UTF-8" />
     <link rel="icon" href="/favicon.ico" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>TSBOARD :: v0.1.0</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap"
+      rel="stylesheet"
+    />
+    <title>tsboard.dev</title>
   </head>
-
   <body>
+    <!-- src/pages/home/HomePage.vue 페이지가 첫화면입니다 -->
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
