관리자 페이지 초안 반영, store 파일명 재조정, 인터페이스 업데이트

--- a/index.html
+++ b/index.html
@@ -7,13 +7,12 @@
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=Oswald:wght@200&display=swap"
+      href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;200;300;400;500;600;700;800&family=Oswald:wght@200&display=swap"
       rel="stylesheet"
     />
-    <title>tsboard.dev</title>
+    <title>TSBOARD.DEV</title>
   </head>
   <body>
-    <!-- src/pages/home/HomePage.vue 페이지가 첫화면입니다 -->
     <div id="app"></div>
     <script type="module" src="/src/main.ts"></script>
   </body>
