--- a/index.html
+++ b/index.html
@@ -1,3 +1,12 @@
+<!--
+ _       _                         _ 
+| |_ ___| |__   ___   __ _ _ __ __| |
+| __/ __| '_ \ / _ \ / _` | '__/ _` |
+| |_\__ \ |_) | (_) | (_| | | | (_| |
+ \__|___/_.__/ \___/ \__,_|_|  \__,_|
+
+v0.8.0 | tsboard.dev                                 
+-->
 <!doctype html>
 <html lang="ko">
   <head>
@@ -10,7 +19,7 @@
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&display=swap"
       rel="stylesheet"
     />
-    <title>TSBOARD.DEV</title>
+    <title>tsboard.dev</title>
   </head>
   <body>
     <div id="app"></div>
