사용자 관리 버그 수정 및 사이트 스타일 일부 변경, 내정보 수정 버그 수정

--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@ v0.8.0 | tsboard.dev
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
     <link
-      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&display=swap"
+      href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&family=Protest+Strike&display=swap"
       rel="stylesheet"
     />
     <title>tsboard.dev</title>
