alpha version 배포 준비

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ v0.8.0 | tsboard.dev
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&family=Protest+Strike&display=swap"
       rel="stylesheet"
     />
-    <title>tsboard.dev</title>
+    <title>TSBOARD - Type Safety Community Builder</title>
   </head>
   <body>
     <div id="app"></div>
