기본 타이틀 내용 수정

--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ v0.9.2 | tsboard.dev
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&family=Protest+Strike&display=swap"
       rel="stylesheet"
     />
-    <title>TSBOARD - Type Safety Community Builder</title>
+    <title>TSBOARD - 타입스크립트로 작성된 오픈소스 커뮤니티 빌더</title>
   </head>
   <body>
     <div id="app"></div>
