--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 | |_\__ \ |_) | (_) | (_| | | | (_| |
  \__|___/_.__/ \___/ \__,_|_|  \__,_|
 
-v0.9.7 | tsboard.dev                                 
+v0.9.8 | tsboard.dev                                 
 -->
 <!doctype html>
 <html lang="ko">
@@ -19,7 +19,7 @@ v0.9.7 | tsboard.dev
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&family=Protest+Strike&display=swap"
       rel="stylesheet"
     />
-    <title>TSBOARD - 타입스크립트로 작성된 오픈소스 커뮤니티 빌더</title>
+    <title>TSBOARD | Type Safety Community Builder</title>
   </head>
   <body>
     <div id="app"></div>
