--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 | |_\__ \ |_) | (_) | (_| | | | (_| |
  \__|___/_.__/ \___/ \__,_|_|  \__,_|
 
-v0.9.9 | tsboard.dev                                 
+v0.9.11 | tsboard.dev                                 
 -->
 <!doctype html>
 <html lang="ko">
@@ -19,7 +19,7 @@ v0.9.9 | tsboard.dev
       href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans+KR:wght@100;200;300;400;500;600;700&family=Protest+Strike&display=swap"
       rel="stylesheet"
     />
-    <title>TSBOARD | Type Safety Community Builder</title>
+    <title>TSBOARD | Building websites is so easy</title>
   </head>
   <body>
     <div id="app"></div>
