--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
 | |_\__ \ |_) | (_) | (_| | | | (_| |
  \__|___/_.__/ \___/ \__,_|_|  \__,_|
 
-v0.9.11 | tsboard.dev                                 
+v1.0.0-beta | tsboard.dev                                 
 -->
 <!doctype html>
 <html lang="ko">
